# golvid

./: .clang-format  .clangd  .gitignore  meson.build  native.txt
src/: agent.cuh  agent_vec.cu  agent_vec.cuh  cell.cuh  cuda_util.cu  cuda_util.cuh  exception.hh  kernel.cu  kernel.cuh  log.hh  main.cc  medium.cu  medium.cuh  params.hh  pixel.cuh  pixel.hh  ratio.hh  res.hh  sim.cu  sim.cuh  sink.cc  sink.hh  universe.hh  util.hh  vec.cuh
src/gst/: bin.cc  bin.hh  bus.cc  bus.hh  element.cc  element.hh  init.cc  init.hh  object.hh  pipeline.cc  pipeline.hh  state.hh  state_change_return.hh
src/log/: level.hh  time.cc  time.hh
